experiments/correlation_mk3/tmp_files/2008.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c(76): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c(79): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c(88): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c(103): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c(106): error: simd clause is incompatible with directive
        #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                     ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c(115): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c(128): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/correlation_mk3/tmp_files/2008.c (code 2)
